# ugv_base_ros_idf

./: CMakeLists.txt  README.md  build.sh  idf_component.yml  install_dependencies.sh  partitions.csv  sdkconfig  setup.sh  switch_idf.sh
inc/: battery_controller.h  common_utils.h  esp_now_controller.h  files_controller.h  gimbal_controller.h  http_server.h  imu_controller.h  json_parser.h  led_controller.h  mission_system.h  module_handlers.h  motion_module.h  oled_controller.h  servo_controller.h  system_info.h  system_manager.h  uart_controller.h  ugv_advanced.h  ugv_config.h  wifi_controller.h
main/: CMakeLists.txt  battery_controller.cpp  esp_now_controller.cpp  files_controller.cpp  files_controller.cpp.backup  gimbal_controller.cpp  http_server.cpp  imu_controller.cpp  json_parser.cpp  led_controller.cpp  main.cpp  mission_system.cpp  module_handlers.cpp  motion_module.cpp  oled_controller.cpp  servo_controller.cpp  system_info.cpp  system_manager.cpp  uart_controller.cpp  ugv_advanced.cpp  wifi_controller.cpp
